// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDerivedStateFromProps works #447 1`] = `
<div>
  <h2>
    One 3
  </h2>
</div>
`;

exports[`no double runs for getDerivedStateFromProps 1`] = `
<div>
  Test-content
</div>
`;

exports[`no warnings in modern react 1`] = `
<div>
  <div>
    42
     + 
    3
  </div>
</div>
`;

exports[`no warnings in modern react 2`] = `
<div>
  <div>
    42
     + 
    4
  </div>
</div>
`;

exports[`observer based context using observer to inject throws warning 1`] = `
Array [
  "Mobx observer: Using observer to inject stores is deprecated since 4.0. Use \`@inject(\\"store1\\", \\"store2\\") @observer ComponentClass\` or \`inject(\\"store1\\", \\"store2\\")(observer(componentClass))\` instead of \`@observer([\\"store1\\", \\"store2\\"]) ComponentClass\`",
  "MobX inject is deprecated and will be removed in the major version (6.0). Please use React.createContext instead.",
]
`;
